<resources>
    <string name="app_name">Biblioteca</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="logout">Cerrar Sesion</string>
    <string name="home">Pagina Principal</string>
    <string name="settings">Configuracion</string>
    <string name="bienvenido">BIENVENIDO</string>

    <string name="settings_fragment">Configuracion</string>
    <string name="favoritos">Favoritos</string>

    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="registrars">Registrarse</string>
    <string name="t_tulo_del_libro">Título del Libro</string>
    <string name="a_adidos_recientemente">Añadidos Recientemente</string>
    <string name="modo_dia">Modo Dia</string>
    <string name="modo_noche">Modo Noche</string>
    <string name="activar">Activar</string>
    <string name="buscar">Buscar</string>
    <string name="recordar_sesi_n">Recordar sesión</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="crear_cuenta">¿No tienes cuenta? Regístrate</string>
    <string name="mostrar_contrasena">Mostrar contraseña</string>
    <string name="recordar_sesion">Recordar sesión</string>
    <string name="contraseña">Contraseña</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="bienvenidos">Bienvenido</string>
    <string name="registrar">Registrar</string>
    <string name="ya_cuenta">¿Ya tienes una cuenta? Inicia sesión</string>
    <string name="mostrar_contrase_a">Mostrar contraseña</string>

</resources>