<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_app_settings_alt_24"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_favoritos"
            android:icon="@drawable/libro"
            android:title="@string/favoritos" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_switch"
                android:title="@string/modo_noche"
                app:actionViewClass="com.google.android.material.switchmaterial.SwitchMaterial"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/logout" />
        </menu>
    </item>


</menu>